fix the dark mode and centering

--- a/dark-mode.css
+++ b/dark-mode.css
@@ -358,3 +358,6 @@ footer {
   width: 100%;
 }
 }
+.modal-body {
+  color:  #000;
+}
